--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -7,6 +7,7 @@
     <artifactId>gs-serving-web-content</artifactId>
     <version>0.1.0</version>
 
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -36,6 +37,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <start-class>hello</start-class>
     </properties>
 
 
