--- a/complete/pom.xml
+++ b/complete/pom.xml
@@ -33,13 +33,23 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
         <java.version>1.8</java.version>
-        <start-class>hello</start-class>
+        <start-class>Application</start-class>
     </properties>
-
 
     <build>
         <plugins>
